[gd_scene load_steps=11 format=3 uid="uid://chktu3gqyp0h5"]

[ext_resource type="Script" path="res://scripts/Bomb.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://dxsca230dfb6c" path="res://seasonsAssets/05-Pig Thowing a Bomb/bomb_sprite.png" id="2"]
[ext_resource type="AudioStream" uid="uid://3m3bxsv8v7fj" path="res://seasonsAssets/05-Pig Thowing a Bomb/booom.wav" id="3"]

[sub_resource type="Animation" id="1"]
resource_name = "Boom"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [10, 11, 12, 13, 14, 9]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3, 0.7),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"turn_off_detector"
}, {
"args": [],
"method": &"queue_free"
}]
}
tracks/2/type = "audio"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("EffectPlayer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("3")
}],
"times": PackedFloat32Array(0.1)
}
tracks/2/use_blend = true

[sub_resource type="Animation" id="2"]
resource_name = "Off"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="3"]
resource_name = "On"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [5, 6, 7, 8]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"boom"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8uggv"]
_data = {
"Boom": SubResource("1"),
"Off": SubResource("2"),
"On": SubResource("3")
}

[sub_resource type="CircleShape2D" id="4"]
radius = 5.0

[sub_resource type="CircleShape2D" id="5"]
radius = 24.0

[sub_resource type="CircleShape2D" id="6"]
radius = 6.0

[node name="Bomb" type="CharacterBody2D"]
position = Vector2(0, -8)
collision_layer = 4
collision_mask = 3
script = ExtResource("1")

[node name="Sprite" type="Sprite2D" parent="."]
position = Vector2(0, 3)
texture = ExtResource("2")
hframes = 5
vframes = 3
frame = 10

[node name="Ani" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8uggv")
}
autoplay = "Off"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
modulate = Color(0.568627, 0, 0.960784, 1)
position = Vector2(0, 8)
shape = SubResource("4")

[node name="BoomDetector" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 23
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="BoomDetector"]
modulate = Color(0.619608, 0.980392, 0.0862745, 1)
position = Vector2(0, 5)
shape = SubResource("5")

[node name="StartDetecting" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[node name="EffectPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3")
volume_db = 0.94
max_distance = 350.0

[node name="StartDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="StartDetector"]
position = Vector2(0, 8)
shape = SubResource("6")

[connection signal="body_entered" from="BoomDetector" to="." method="_on_BoomDetector_body_entered"]
[connection signal="timeout" from="StartDetecting" to="." method="_on_StartDetecting_timeout"]
[connection signal="body_entered" from="StartDetector" to="." method="_on_StartDetector_body_entered"]
